--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -65,6 +65,7 @@ All options not otherwise specified are point-time outputs.
 || mean insecticide content || Average insecticide content of all nets in mg/m² (will be not-a-number when no nets are owned) ||
 || IRS insecticide content || Average insecticide content of hut walls over all houses ([ModelIntervVector#Newer_model new IRS model] version 2 only); added in schema 30 ||
 || IRS effects || Average effect of IRS on the following three factors: availablity to mosquitoes, preprandial killing, postprandial killing; mean across all humans; both [ModelIntervVector#Indoor_Residual_Spraying IRS models] version 1 and 2; added in schema 30 ||
+|| resource availability || Mean larval resources over a time-step (1/γ for [ModelMosqPopDynamics these models] ||
 
 == Survey measures ==
 
