--- a/wiki/ModelMosqPopDynamics.wiki
+++ b/wiki/ModelMosqPopDynamics.wiki
@@ -4,8 +4,7 @@
 
 In the default vector model, emergence of nulliparous vectors from breeding sites follows a periodic orbit (seasonal pattern) that is calculated from that of the EIR used to drive the simulations.  This seasonal pattern may be varied by simulating [ModelIntervVector#Larviciding larviciding], (which acts by explicitly reducing the emergence rate, proportionately to the coverage). 
 
-The Mosquito Population Dynamics Models described here are alternatives, that allow for feedback from the densities of ovipositing female mosquitoes on subsequent emergence.  This allows the user to specify varying degrees of density-dependent regulation of populations immature mosquitoes, so that adulticiding interventions may reduce emergence rates.  In these models, larviciding interventions that reduce emergence are effectively acting by reducing the carrying capacity of the breeding sites.
-
+The Mosquito Population Dynamics Models described here are alternatives, that allow for feedback from the densities of ovipositing female mosquitoes on subsequent emergence.  This allows the user to specify varying degrees of density-dependent regulation of populations immature mosquitoes, so that adulticiding interventions may reduce emergence rates. 
 The Mosquito Population Dynamics Models must be explicitly activated.
 
 
