--- a/wiki/EIRSeasonDynamic.wiki
+++ b/wiki/EIRSeasonDynamic.wiki
@@ -63,6 +63,17 @@ http://openmalaria.googlecode.com/svn/wiki/eqns/EIR_Fourier_annual.png
 \end{align*}
 </wiki:comment>
 
+
+This is configured using a section in the XML, per species, similar to the following:
+{{{
+<seasonality annualEIR="178.60558666831946" input="EIR">
+          <fourierSeries EIRRotateAngle="0">
+            <coeffic a="-0.692164" b="0.002098"/>
+            <coeffic a="0.401189" b="-0.375356"/>
+          </fourierSeries>
+        </seasonality>
+}}}
+
 ==== EIR via monthly values ====
 
 As of schema version 22 this method of entering EIR was added to simplify entry of field data. Fourier coefficients are still used within the code (for smoothing), but are calculated internally.
