Edited wiki page ExperimentDesign through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2398 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ExperimentDesign.wiki
+++ b/wiki/ExperimentDesign.wiki
@@ -57,7 +57,7 @@ Each XML sweep should consist of a directory containing one XML file for each ar
 
 ==== Example ====
 
-A simple example experiment description: [http://code.google.com/p/openmalaria/source/browse/download/experiments/EC-example-schema-28.7z EC-example-schema-28.7z]
+A simple example experiment description: [http://code.google.com/p/openmalaria/source/browse/download/experiments/example-28-5-day.7z example-28-5-day.7z]
 
 (This is a [http://7-zip.org/ 7-zip] archive. Right-click on "View raw file" and choose "save as ...".)
 
