--- a/wiki/SetupOverview.wiki
+++ b/wiki/SetupOverview.wiki
@@ -4,21 +4,24 @@
 
 If you would like to help the project by offering down-time on your computer to run simulations, join us at [http://www.malariacontrol.net malariacontrol.net]
 
-= Installing =
+= Running your own simulations =
 
-See also the [Binaries] page for information on how and where to install pre-built executables of *openmalaria*.
+If you would like to run your own simulations you have the following options:
 
-If you want to run your own simulations, you have the following options:
-  * install the compiled tool with GUI [openmalariaTools openmalariaTools]  
-  * build the openmalaria executable from [BuildSystem source]
+  * run your own simulation scenarios directly from the command line as described on the [UtilsRunning] page.  This is a good way to learn about the capabilities of *openmalaria* and to test small numbers of scenarios.  
 
-= Running =
+  * install the compiled tool with GUI [openmalariaTools openmalariaTools].  This includes facilities for updating configuration files and running small simulation experiments comprising multiple scenarios.  
 
-[openmalariaTools openmalariaTools] includes facilities for updating and running scenarios. Alternatively, they can be run directly from the command line as described on the [UtilsRunning] page.
+  * The [Binaries] page gives general information on how and where to install pre-built executables of *openmalaria*.
+
+= Contributing to *openmalaria* development =
+
+  * If you want to join the development effort, you can find the source code [Code#Source_code here].
+  * To build the openmalaria executable from source, go [BuildSystem here]
 
 = Tools =
 
-It can also be helpful to have a good text editor on hand, especially one that can edit XML files easily. 
+The configuration files for *openmalaria* are in XML format, which allows them to be edited by a text editor.  We recommend the following:
 
   * [UtilsWindows Windows] — a convenient text editor, and archive tool
-  * MacOSX — handles archives fine but not necessarily XML files; dashcode (presumably part of [http://developer.apple.com/tools/xcode/ xcode]) can edit XML files but struggles with scripts, or you can [http://www.google.com/search?q=macosx+text+editor search for one]
+  * For MacOSX — handles archives fine but not necessarily XML files; dashcode (presumably part of [http://developer.apple.com/tools/xcode/ xcode]) can edit XML files but struggles with scripts. There are a number of other MacOSX editors [http://www.google.com/search?q=macosx+text+editor search for one]
