--- a/wiki/Instructions.wiki
+++ b/wiki/Instructions.wiki
@@ -1,13 +1,10 @@
-#summary How to apply !OpenMalaria to field sites.
-
-= Introduction =
-
-Individuals interested in simulating malaria in a particular location may find this a useful starting point for downloading and using !OpenMalaria, building scenario files, and analyzing results.
+#summary How to simulate malaria in specific sites with !OpenMalaria
 
 = How to apply !OpenMalaria to field sites =
 
-A glossary of useful terms related to the !OpenMalaria wiki can be found [http://code.google.com/p/openmalaria/wiki/Terminology here].
-
+!OpenMalaria can be used for simulating _P. falciparum_ epidemiology in specific sites, using measured characteristics of the vectors in the site and information on the local prevalence of incidence to parameterise the models.  This may be used both for:
+(i) validating the models by comparing their outputs to additional data from the site.
+(ii) projecting the likely effects of interventions in that specific location.
 
 ==1.	Download !OpenMalaria==
 
