Edited wiki page Start through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2406 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Start.wiki
+++ b/wiki/Start.wiki
@@ -62,7 +62,8 @@ Each simulation requires implementation of various components, from transmission
 The *openmalaria* development team includes staff of the [http://www.swisstph.ch/en/about-us/departments/epidemiology-and-public-health-eph/health-systems-research-and-dynamical-modelling/dynamical-modelling.html Swiss Tropical and Public Health Institute (Swiss TPH)], the [http://ndssl.vbi.vt.edu/index.php Network Dynamics and Simulation Science Laboratory at Virginia Bioinformatics Institute] 
 and the [http://www.lstmliverpool.ac.uk Liverpool School of Tropical Medicine].  Financial support is from the [http://www.gatesfoundation.org/Pages/home.aspx Bill & Melinda Gates Foundation]
 
-For public discussion, please use the [http://groups.google.com/group/openmalaria openmalaria] google group.
+For public discussion, please use the [http://groups.google.com/group/openmalaria openmalaria] google group.   A glossary of useful terms related to !OpenMalaria can be found [http://code.google.com/p/openmalaria/wiki/Terminology here].
+
 
 = References =
 
