Edited wiki page ModelsOverview through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2408 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelsOverview.wiki
+++ b/wiki/ModelsOverview.wiki
@@ -4,7 +4,7 @@
 
 == Simulation phases ==
 
-Prior to simulating the outcomes of an intervention or steady-state scenario in what we term the *intervention phase*, our code runs through a warm-up phase. See [ModelTimeUpdates] for details.
+Prior to simulating the outcomes of an intervention or steady-state scenario in what we term the *intervention phase*, the code runs through a warm-up phase. See [ModelTimeUpdates] for details.
 
 == Diagrams ==
 
