Edited wiki page TableOfContents through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2411 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -30,7 +30,7 @@
   * *[ModelsOverview Model descriptions]*
     * [ModelTimeUpdates Sequencing and time steps]
     * [ModelDemography Human demography]
-    * [ModelHumanMisc Miscelaneous human models]
+    * [ModelHumanMisc Miscellaneous human models]
     * [ModelTransmission Transmission models]
     * [ModelWithinHost Within-host models]
       * [ModelDrug Drug (PKPD) action & resistance models]
