Edited wiki page ModelsOverview through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2418 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/ModelsOverview.wiki
+++ b/wiki/ModelsOverview.wiki
@@ -4,9 +4,9 @@
 
 == Simulation phases ==
 
-Prior to simulating the outcomes of an intervention or steady-state scenario in what we term the *intervention phase*, the code runs through a warm-up phase. See [ModelTimeUpdates] for details.
+Prior to simulating the outcomes of an intervention or steady-state scenario in what we term the *intervention phase*, the code runs through a *warm-up phase*. See [ModelTimeUpdates] for details.
 
-== Diagrams ==
+== Model diagrams ==
 
 The diagram below gives a high-level view of the processes abstracted into a model. All model-specific behaviour is abstracted into one block, or model component. More detailed graphs restricted to
 the components of interest are available on some of the sub-model pages.
