--- a/wiki/ModelTimeUpdates.wiki
+++ b/wiki/ModelTimeUpdates.wiki
@@ -9,13 +9,13 @@ The simulation has the following phases. They take place sequentially as ordered
 
 == Set-up ==
 
-At time _t_=0, the human and (if using the vector model) mosquito populations are created.
+At time *'t = 0'*, the human and (if using the vector model) mosquito populations are created.
 
 == Warm-up ==
 
-The simulation is run with enforced transmission until _t_=_tWL_ (that is, the simulation's state at times _t_=1 through to _t_=_tWL_ are calculated).
+The simulation is run with enforced transmission until *'t = tWL'* (that is, the simulation's state at times *'t = 1'* through to *'t = tWL'* are calculated).
 
-_tWL_ is calculated to be:
+*'tWL'* is calculated to be:
 
  * at least as long as the human life span (`maximumAgeYrs` attribute of the scenario's `<demography>` element)
  * at least as long as the warmup length requested by the transmission model
@@ -23,46 +23,46 @@ _tWL_ is calculated to be:
 
 == Transmission initialisation iteration ==
 
-At this point, the transmission model's `initIterate()` method is called. This either specifies that the transmission model is sufficiently well initialised (in which case the next phase is immediately started) or gives a length of time to continue the simulation for before this method is called again.
+At this point, the transmission model's *`initIterate()`* method is called. This either specifies that the transmission model is sufficiently well initialised (in which case the next phase is immediately started) or gives a length of time to continue the simulation for before this method is called again.
 
 In the [ModelTransmission#Non-vector_transmission non-vector model], this prepares the model to switch to dynamic transmission mode (if enabled) and indicates the next phase should be started.
 
-In the [XmlEntoVector vector transmission model], `initIterate()` checks whether or not the simulated EIR could significantly better reproduce the EIR requested in the scenario file or not. If so, it makes some adjustments and indicates the simulation should continue for six years before calling `initIterate` again (unless this has already been tried 10 times, in which case it halts the simulation with an error). Once the model is satisfied the simulated EIR sufficiently well approximates the requested EIR, it indicates the simulation should be run for another year (to let mosquito parameters stabilise after their final tweaks) before switching on dynamic transmission and indicating that the next phase may begin.
+In the [XmlEntoVector vector transmission model], `initIterate()` checks whether or not the simulated EIR could significantly better reproduce the EIR requested in the scenario file or not. If so, it makes some adjustments and indicates the simulation should continue for six years before calling *`initIterate`* again (unless this has already been tried 10 times, in which case it halts the simulation with an error). Once the model is satisfied the simulated EIR sufficiently well approximates the requested EIR, it indicates the simulation should be run for another year (to let mosquito parameters stabilise after their final tweaks) before switching on dynamic transmission and indicating that the next phase may begin.
 
 == Intervention period ==
 
 Finally, the so called "intervention period" starts: the period during which interventions may be deployed and measurements of the simulation may be taken.
 
-Only once this starts are the values of *_tI₀_* and *_tEnd_* known for certain. At this point the *_tI_* time measure starts being useful.
+Only once this starts are the values of *'tI₀'* and *'tEnd'* known for certain. At this point the *'tI'* time measure starts being useful.
 
 = Timestep updates =
 
-The state of the simulation is of course calculated iteratively: the state at time _t_ depends on the state before time _t_.
+The state of the simulation is of course calculated iteratively: the state at time *'t'* depends on the state before time *'t'*.
 
-To calculate the state at time _t_, first the variables `TimeStep::simulation` and `TimeStep::interventionPeriod` are updated (to _t_ and _tI_). If _t_=_tI₀_, _tI_ is set to 0 (note: this is described differently to what happens in the code, but is be equivalent since _tI_ has no effect in Population::update1() when its value is less than 1).
+To calculate the state at time *'t'*, first the variables *`TimeStep::simulation`* and *`TimeStep::interventionPeriod`* are updated (to *'t'* and *'tI'*). If *'t = tI₀'*, *'tI'* is set to 0 (note: this is described differently to what happens in the code, but is be equivalent since *'tI'* has no effect in Population::update1() when its value is less than 1).
 
 Next `Population::update1` is called to calculate the new state.
 
-Any continuous and survey-based monitoring configured to happen at this _tI_ happens next.
+Any continuous and survey-based monitoring configured to happen at this *'tI'* happens next.
 
-Finally, any interventions configured for deployment at time _tI_ (both timed and continuous for humans at their current age) are deployed.
+Finally, any interventions configured for deployment at time *'tI'* (both timed and continuous for humans at their current age) are deployed.
 
 == `Population::update1` ==
 
  * neonatal mortality is updated based on the previous time-step's patent hosts
  * the transmission model is updated based on previous infectiousness of humans
- * `Human::update` is called for each human
+ * *`Human::update`* is called for each human
  * population age structure is maintained by outmigrating some humans
  * population size is maintained by adding new-borns
  * transmission-specific summary statistics are updated
 
 == `Human::update` ==
 
- * those humans older than the human life span (see calculation of _tWL_ above) are killed
+ * those humans older than the human life span (see calculation of *'tWL'* above) are killed
  * number of _P.f._ inoculations is calculated and new infections are started
  * infections' parasite densities are updated: this is when drugs from the 1-day time-step model have their effect
  * indirect deaths (neonatal and otherwise) occur
- * pathogenesis state is updated based on the new parasite densities (i.e. new illnesses start)
+ * pathogenesis state is updated based on the new parasite densities (_i.e._, new illnesses start)
  * diagnosis, medication and (only in the 5-day time-step model) treatment occurs
  * infant death statistics are updated
  * infectiousness of human is calculated
@@ -72,8 +72,8 @@ Note that effects of disease, diagnosis, and medication all occur based on the p
 = Terminology =
 
 || variable || name in code || description ||
-|| _t_ || TimeStep::simulation || Timestep being updated or last complete (see [#Timestep_updates]) ||
-|| _tI_ || TimeStep::interventionPeriod || Before the intervention period, _tI_<0; during this period _tI_=_t_+_tI0_ ||
-|| _tWL_ || humanWarmupLength || Length of first phase and time of its end ||
-|| _tI₀_ || (none) || _t_ at the start of the intervention period (only known when _t_ ≥ _tI₀_ ||
-|| _tEnd_ || (totalSimDuration) || Time at which the simulation ends (only known when _t_ ≥ _tI₀_ ||
+|| *'t'* || TimeStep::simulation || Timestep being updated or last complete (see [#Timestep_updates]) ||
+|| *'tI'*|| TimeStep::interventionPeriod || Before the intervention period, *'tI'*<0; during this period *'tI = t + tI0'* ||
+|| *'tWL'* || humanWarmupLength || Length of first phase and time of its end ||
+|| *'tI₀'* || (none) || *'t'* at the start of the intervention period (only known when *'t  ≥ tI₀ '* ||
+|| *'tEnd'* || (totalSimDuration) || Time at which the simulation ends (only known when *'t ≥ tI₀'* ||
